# rw-toolpaths

./: .gitignore  LICENSE  NOTICE  README.md  RW.Toolpaths.sln
RW.Toolpaths/: BoostVoronoiInterop.cs  BoostVoronoiProvider.cs  MedialAxisEdgeClassifier.cs  MedialAxisSegmentEmitter.cs  MedialAxisToolpaths.cs  NativeMedialAxisProvider.cs  OffsetFill.cs  PathTreeNode.cs  PathUtils.cs  PerfLog.cs  README.md  RW.Toolpaths.csproj  RampUtils.cs  ToolpathCurveDetector.cs
RW.Toolpaths.Avalonia/: App.axaml  App.axaml.cs  FontGlyphExtractor.cs  GeometryPreviewControl.cs  HeadlessDebugCommands.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  RW.Toolpaths.Avalonia.csproj  app.manifest
RW.Toolpaths.Tests/: AlgorithmParityTests.cs  MedialAxisCallContractTests.cs  MedialAxisSegmentEmitterTests.cs  PathUtilsCanonicalizeTests.cs  RW.Toolpaths.Tests.csproj  RampUtilsTests.cs  SGlyphGuiTopologyTests.cs  ToolpathCurveDetectorTests.cs  ToolpathTaggingTests.cs
RW.Toolpaths/native/: CMakeLists.txt  boost_voronoi_wrapper.cpp  boost_voronoi_wrapper.h  setup-native.ps1  setup-native.sh
